--- a/react-hw-1/src/components/Button/style.module.css
+++ b/react-hw-1/src/components/Button/style.module.css
@@ -56,6 +56,23 @@
   transition: 0.5s;
   color: white;
 }
+.forTimer {
+  width: 70px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 0px;
+  color: white;
+  margin: 10px;
+  cursor: pointer;
+  background-color: blue;
+}
+.buttonForRegistration {
+  width: 372px;
+  height: 69px;
+  background: #007bff;
+  border: 4px solid #0077f7;
+  border-radius: 200px;
+}
 .button.primary:hover {
   background-position: right center;
 }
