--- a/react-hw-1/src/components/Input/style.module.css
+++ b/react-hw-1/src/components/Input/style.module.css
@@ -1,5 +1,5 @@
 .input {
-  margin: 0 15px 30px;
+  margin: 0 auto 10px;
   display: flex;
   width: 250px;
   height: 20px;
@@ -12,4 +12,37 @@
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 16px;
   color: gray;
+}
+.inputForConverter {
+  margin: 0 auto 10px;
+  display: flex;
+  width: 250px;
+  height: 20px;
+  border: 1px solid grey;
+  border-radius: 0px;
+  color: dimgrey;
+  outline: none;
+}
+.burgerMenu {
+  display: none;
+  opacity: 0;
+  z-index: 2;
+}
+.inputForRegistration {
+  margin-top: 15px;
+  width: 372px;
+  height: 63px;
+  background: #f5f9ff;
+  border: 4px solid #82a9ff;
+  border-radius: 200px;
+}
+.label {
+  width: 166px;
+  height: 29px;
+  font-family: "Raleway";
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  color: #254050;
 }
