--- a/react-hw-1/src/components/Registration/style.module.css
+++ b/react-hw-1/src/components/Registration/style.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   text-align: left;
   margin-bottom: 30px;
+  height: 1200px;
 }
 .inputContainer {
   margin-bottom: 40px;
