--- a/react-hw-1/src/components/Button/style.module.css
+++ b/react-hw-1/src/components/Button/style.module.css
@@ -73,6 +73,19 @@
   border: 4px solid #0077f7;
   border-radius: 200px;
 }
+.buttonDark {
+  width: 372px;
+  height: 69px;
+  background: white;
+  border: 4px solid white;
+  border-radius: 200px;
+  color: #0077f7;
+  font-family: "Raleway";
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+}
 .button.primary:hover {
   background-position: right center;
 }
