--- a/react-hw-1/src/components/Header/style.module.css
+++ b/react-hw-1/src/components/Header/style.module.css
@@ -1,10 +1,8 @@
 .header {
-  width: 1569px;
-  height: 147px;
-  background: #f8fafe;
+  width: 100%;
 }
 .headerMax {
-  width: 1569px;
+  width: 100%;
   height: 147px;
   background: #f8fafe;
   margin-bottom: 150px;
@@ -13,7 +11,6 @@
   display: none;
 }
 .visible {
-  width: 1087px;
   height: 100%;
   margin-left: 234px;
   display: flex;
