--- a/react-hw-1/src/components/Button/style.module.css
+++ b/react-hw-1/src/components/Button/style.module.css
@@ -72,6 +72,12 @@
   background: #007bff;
   border: 4px solid #0077f7;
   border-radius: 200px;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 145.2%;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
 .buttonDark {
   width: 372px;
