--- a/react-hw-1/src/components/Input/style.module.css
+++ b/react-hw-1/src/components/Input/style.module.css
@@ -36,6 +36,14 @@
   border: 4px solid #82a9ff;
   border-radius: 200px;
 }
+.search {
+  width: 260px;
+  height: 44px;
+  background: #f5f9ff;
+  border: 4px solid #016efc;
+  border-radius: 200px;
+  margin-right: 140px;
+}
 .darkInput {
   margin-top: 15px;
   width: 372px;
