--- a/react-hw-1/src/components/AllPosts/style.module.css
+++ b/react-hw-1/src/components/AllPosts/style.module.css
@@ -29,3 +29,56 @@
   letter-spacing: 0.03em;
   color: #016efc;
 }
+.spinWrapper {
+  position: relative;
+  width: 100%;
+  background: #016efc;
+}
+
+.spinWrapper .spinner {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  border: 3px solid transparent;
+  border-top-color: #a04668;
+  top: 30%;
+  left: 50%;
+  margin: -30px;
+  border-radius: 50%;
+  animation: spin 2s linear infinite;
+}
+
+.spinWrapper .spinner:before,
+.spinWrapper .spinner:after {
+  content: "";
+  position: absolute;
+  border: 3px solid transparent;
+  border-radius: 50%;
+}
+
+.spinWrapper .spinner:before {
+  border-top-color: #254e70;
+  top: -12px;
+  left: -12px;
+  right: -12px;
+  bottom: -12px;
+  animation: spin 3s linear infinite;
+}
+
+.spinWrapper .spinner:after {
+  border-top-color: #fffbfe;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  animation: spin 4s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
