--- a/react-hw-1/src/components/Registration/style.module.css
+++ b/react-hw-1/src/components/Registration/style.module.css
@@ -7,9 +7,42 @@
   height: 1200px;
 }
 .inputContainer {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
-.text {
+.inputPasswordShow {
+  margin-bottom: 20px;
+  position: relative;
+}
+.inputPasswordShow::before {
+  content: "";
+  position: absolute;
+  top: 70px;
+  right: 30px;
+  margin: auto 0;
+  width: 25px;
+  height: 25px;
+  background: url("show.png") no-repeat;
+  background-position: right;
+  background-size: cover;
+}
+.inputPasswordClose {
+  margin-bottom: 20px;
+  position: relative;
+}
+.inputPasswordClose::before {
+  content: "";
+  position: absolute;
+  top: 70px;
+  right: 30px;
+  margin: auto 0;
+  width: 25px;
+  height: 25px;
+  background: url("close.png") no-repeat;
+  background-size: cover;
+}
+
+.text,
+.textError {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 400;
@@ -26,4 +59,9 @@
   line-height: 134%;
   letter-spacing: 0.03em;
   color: #016efc;
+}
+.textError {
+  color: brown;
+  font-weight: 700;
+  margin-bottom: 40px;
 }
