--- a/react-hw-1/src/components/AllPosts/style.module.css
+++ b/react-hw-1/src/components/AllPosts/style.module.css
@@ -3,7 +3,27 @@
   align-items: center;
   justify-content: space-around;
 }
-.title {
+.container {
+  display: flex;
+  align-items: center;
+}
+.btnAdd {
+  width: 110px;
+  height: 51px;
+  background: #007bff;
+  border: 4px solid #0077f7;
+  border-radius: 200px;
+  font-family: "Raleway";
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  margin-right: 420px;
+  cursor: pointer;
+}
+.title,
+.titleLogin {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 45px;
@@ -12,6 +32,9 @@
   color: #016efc;
   margin-right: 550px;
   margin-left: 110px;
+}
+.container .titleLogin {
+  margin-right: 30px;
 }
 .textSearch {
   font-family: "Raleway";
