--- a/react-hw-1/src/components/Input/style.module.css
+++ b/react-hw-1/src/components/Input/style.module.css
@@ -36,20 +36,21 @@
   border: 4px solid #82a9ff;
   border-radius: 200px;
 }
+
 .search {
   width: 260px;
   height: 44px;
   background: #f5f9ff;
   border: 4px solid #016efc;
   border-radius: 200px;
-  margin-right: 140px;
 }
 .darkInput {
   margin-top: 15px;
   width: 372px;
   height: 63px;
+  /* background: #313439; */
   background: #254050;
-  border: 4px solid white;
+  border: 2px solid white;
   border-radius: 200px;
   color: white;
 }
@@ -72,4 +73,26 @@
   line-height: 29px;
   letter-spacing: 0.05em;
   color: white;
+}
+.addLabel {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  margin-bottom: 15px;
+}
+.error {
+  margin-top: 15px;
+  width: 372px;
+  height: 63px;
+  background: #f5f9ff;
+  border-radius: 200px;
+  border: 4px solid red;
+}
+
+.textError {
+  font-size: 16px;
 }
