--- a/react-hw-1/src/components/LoginForm/style.module.css
+++ b/react-hw-1/src/components/LoginForm/style.module.css
@@ -3,9 +3,33 @@
   flex-direction: column;
   align-items: center;
   text-align: left;
-  margin-bottom: 30px;
+  padding-top: 20px;
   height: 800px;
 }
 .inputContainer {
   margin-bottom: 30px;
+  text-align: left;
+}
+.text {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 134%;
+  letter-spacing: 0.03em;
+  color: #254050;
+}
+.linkLogin {
+  text-decoration: none;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 134%;
+  letter-spacing: 0.03em;
+  color: #016efc;
+}
+.textError {
+  color: brown;
+  font-weight: 700;
+  margin-bottom: 40px;
 }
