--- a/react-hw-1/src/components/NavBar/style.module.css
+++ b/react-hw-1/src/components/NavBar/style.module.css
@@ -1,3 +1,29 @@
+.postsPanel {
+  display: flex;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  padding-top: 135px;
+}
+.allPosts {
+  width: 166px;
+  margin-right: 15px;
+}
+.privatePosts {
+  display: flex;
+  flex-direction: column;
+  width: 273px;
+  margin-right: 205px;
+}
+a {
+  margin-bottom: 30px;
+  text-decoration: none;
+  color: #ffffff;
+}
 .burgerMenuNav {
   padding-top: 40px;
   width: 27px;
@@ -40,10 +66,30 @@ li {
   margin-bottom: 22px;
   margin-right: 495px;
 }
-a {
-  text-decoration: none;
+.logoutImage {
+  padding-top: 50px;
+}
+.logOut {
+  width: 120px;
+  height: 30px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  background: transparent;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
   color: #ffffff;
+  text-align: left;
+  padding-top: 135px;
+  margin-bottom: 55px;
+}
+.loginToggle {
+  margin-right: 110px;
 }
 .dark {
-  padding-top: 140px;
+  padding-top: 110px;
 }
