--- a/react-hw-1/src/components/User/style.module.css
+++ b/react-hw-1/src/components/User/style.module.css
@@ -1,22 +1,25 @@
+.mainContainer {
+  padding-top: 20px;
+}
 .userContainer {
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 200px;
-  height: 70px;
-  background-color: cadetblue;
+  width: 150px;
+  height: 40px;
+  background-color: #007bff;
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   margin-bottom: 20px;
 }
 .userShort {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   align-items: center;
   justify-content: center;
   display: flex;
-  background-color: darkcyan;
+  background-color: blue;
   border-radius: 5px;
   margin-right: 5px;
   color: white;
