--- a/react-hw-1/src/components/AuthTitle/style.module.css
+++ b/react-hw-1/src/components/AuthTitle/style.module.css
@@ -10,7 +10,8 @@ span {
   letter-spacing: 0.03em;
   color: #254050;
 }
-.active_link {
+.active_link,
+.darkActiveLink {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -20,7 +21,11 @@ span {
   color: #016efc;
   text-decoration: underline;
 }
-.unactive {
+.darkActiveLink {
+  color: goldenrod;
+}
+.unactive,
+.darkUnactive {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -28,4 +33,7 @@ span {
   line-height: 145.2%;
   letter-spacing: 0.03em;
   color: #75869b;
+}
+.darkUnactive {
+  color: darkgrey;
 }
