--- a/react-hw-1/src/components/User/style.module.css
+++ b/react-hw-1/src/components/User/style.module.css
@@ -1,7 +1,8 @@
 .mainContainer {
   padding-top: 20px;
 }
-.userContainer {
+.userContainer,
+.darkUserContainer {
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -13,7 +14,12 @@
   border-radius: 10px;
   margin-bottom: 20px;
 }
-.userShort {
+.darkUserContainer {
+  background-color: white;
+  color: rgb(7, 67, 84);
+}
+.userShort,
+.darkUserShort {
   width: 30px;
   height: 30px;
   align-items: center;
@@ -23,6 +29,9 @@
   border-radius: 5px;
   margin-right: 5px;
   color: white;
+}
+.darkUserShort {
+  background-color: rgb(7, 67, 84);
 }
 .userDarkFull {
   background-color: black;
