--- a/react-hw-1/src/components/Button/style.module.css
+++ b/react-hw-1/src/components/Button/style.module.css
@@ -79,15 +79,32 @@
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+.remove {
+  width: 150px;
+  height: 50px;
+  background: #007bff;
+  border: 4px solid #0077f7;
+  border-radius: 200px;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+  /* padding-top: 10px; */
+}
 .buttonDark {
   width: 372px;
   height: 69px;
   background: white;
   border: 4px solid white;
   border-radius: 200px;
-  color: #0077f7;
+  color: rgb(7, 67, 84);
   font-family: "Raleway";
-  font-weight: 500;
+  font-weight: 600;
   font-size: 25px;
   line-height: 29px;
   letter-spacing: 0.05em;
