--- a/react-hw-1/src/components/Input/style.module.css
+++ b/react-hw-1/src/components/Input/style.module.css
@@ -48,11 +48,9 @@
   margin-top: 15px;
   width: 372px;
   height: 63px;
-  /* background: #313439; */
-  background: #254050;
-  border: 2px solid white;
+  background: whitesmoke;
   border-radius: 200px;
-  color: white;
+  color: gray;
 }
 .label {
   width: 166px;
@@ -90,9 +88,15 @@
   height: 63px;
   background: #f5f9ff;
   border-radius: 200px;
-  border: 4px solid red;
+  border: 3px solid goldenrod;
 }
 
-.textError {
+.textError,
+.darkTextError {
   font-size: 16px;
+  width: 380px;
+  color: red;
+}
+.darkTextError {
+  color: goldenrod;
 }
