--- a/react-hw-1/src/components/TemplateTitle/style.module.css
+++ b/react-hw-1/src/components/TemplateTitle/style.module.css
@@ -1,4 +1,5 @@
-.container {
+.container,
+.darkContainer {
   margin: 0 auto;
   height: 1518px;
   background: #016efc;
@@ -6,6 +7,9 @@
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: contain;
+}
+.darkContainer {
+  background: rgb(7, 67, 84);
 }
 .infoPanel {
   display: flex;
@@ -68,17 +72,23 @@
 .textImage {
   margin: 10px;
 }
-.textarea {
-  width: 372px;
-  height: 273px;
-  left: 254px;
-  top: 658px;
+.textarea,
+.darkTextarea {
+  padding: 20px;
+  width: 352px;
+  height: 253px;
   background: #f5f9ff;
   border: 4px solid #82a9ff;
   border-radius: 60px;
   resize: none;
+  outline: none;
+  -moz-appearance: none;
 }
-.add {
+.darkTextarea {
+  border: none;
+}
+.add,
+.addDark {
   display: block;
   width: 110px;
   height: 40px;
@@ -97,6 +107,11 @@
   padding-top: 10px;
   margin-bottom: 55px;
 }
+.addDark {
+  background: white;
+  border: none;
+  color: rgb(7, 67, 84);
+}
 .inputFile {
   opacity: 0;
   visibility: hidden;
@@ -107,9 +122,83 @@
   height: 273px;
   background: transparent;
 }
-.addImg {
+.addImg,
+.darkAddImg {
   width: 100%;
   height: 100%;
   border-radius: 60px;
   border: 4px solid #82a9ff;
+  margin-bottom: 30px;
 }
+.darkAddImg {
+  border: 4px solid goldenrod;
+}
+
+/* .addPostWrraper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.addPost {
+  display: flex;
+  width: 100%;
+}
+
+.addText,
+.addImg {
+  width: 100%;
+  padding: 3rem 3rem 6.5rem 3rem;
+}
+
+.addName {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  margin-bottom: 1rem;
+}
+
+.textarea {
+  height: 23rem;
+  width: 32rem;
+  text-align: start;
+  background: #f5f9ff;
+  border: 4px solid #82a9ff;
+  border-radius: 60px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 29px;
+  color: #254050;
+  padding: 1rem;
+  resize: none;
+  outline: none;
+}
+
+.addBtn {
+  display: flex;
+  position: relative;
+  height: 63px;
+}
+
+.addManeBtn {
+  width: 100%;
+  max-width: 23rem;
+}
+
+.img {
+  display: block;
+  width: 100%;
+  z-index: 1;
+}
+.upload_button {
+  opacity: 0;
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 0;
+} */
