--- a/react-hw-1/src/pages/Error/style.module.css
+++ b/react-hw-1/src/pages/Error/style.module.css
@@ -5,27 +5,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(
-    to right,
-
-    rgb(92, 182, 189) 0%,
-    rgb(20, 181, 225) 25%,
-    rgb(50, 144, 144) 50%,
-    rgb(58, 174, 194) 75%,
-    rgb(61, 208, 234) 100%
-  );
-  background-size: 200% auto;
-  transition: all 0.9s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  animation: back 5s linear infinite;
+  background-image: url("./not.jpg");
+  background-size: 650px;
+  background-position: center top;
+  background-repeat: no-repeat;
 }
-.imgError {
-  border-radius: 20px;
-  margin-bottom: 50px;
+.btnContainer {
+  padding-top: 600px;
 }
 .btn {
   width: 200px;
   height: 50px;
-  background: white;
+  background: rgb(7, 67, 84);
   border: none;
   border-radius: 20px;
   font-family: "Raleway";
@@ -33,7 +24,7 @@
   font-size: 24px;
   line-height: 145.2%;
   letter-spacing: 0.03em;
-  color: rgb(94, 93, 93);
+  color: whitesmoke;
   cursor: pointer;
 }
 
