--- a/react-hw-1/src/pages/Activation/style.module.css
+++ b/react-hw-1/src/pages/Activation/style.module.css
@@ -1,4 +1,5 @@
-.textActivation {
+.textActivation,
+.darkTextActivation {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 400;
@@ -8,4 +9,7 @@
   letter-spacing: 0.03em;
   color: #254050;
   margin: 10px;
+}
+.darkTextActivation {
+  color: white;
 }
