--- a/react-hw-1/src/components/Button/style.module.css
+++ b/react-hw-1/src/components/Button/style.module.css
@@ -81,19 +81,20 @@
 }
 .remove {
   width: 150px;
-  height: 60px;
+  height: 50px;
   background: #007bff;
   border: 4px solid #0077f7;
   border-radius: 200px;
   font-family: "Raleway";
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 29px;
   letter-spacing: 0.05em;
   text-align: center;
   color: #ffffff;
   cursor: pointer;
+  margin-right: 10px;
   /* padding-top: 10px; */
 }
 .buttonDark {
